# quantzero

./: .env.example  .gitignore  CLAUDE.md  MILESTONE.md  Makefile  README.md  docker-compose.observability.yml  pyproject.toml
config/prometheus/: prometheus.yml
docs/: UNIVERSE.md
grafana/provisioning/dashboards/: feature_speed.json  provider.yml
quantzero/: __init__.py  backfill.py  bench.py  clock.py  config.py  driver.py  engine.py  events.py  feature.py  latency.py  metrics.py  parity.py  raw_store.py  retention.py  run_live.py  run_sharded.py  run_sim.py  sharding.py  state.py  store.py  universe.py
quantzero/caches/: __init__.py  rolling.py  running.py
quantzero/dashboard/: __init__.py  app.py  index.html
quantzero/dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.ts
quantzero/dashboard/frontend/src/: App.tsx  CanvasHeatmap.tsx  LatencyView.tsx  Tooltip.tsx  api.ts  styles.css  theme.ts  types.ts
quantzero/features/: __init__.py  flow.py  microstructure.py  price.py  rangepos.py  session.py  volatility.py  volume.py
quantzero/sources/: __init__.py  alpaca.py  base.py  simulation.py
tests/: helpers.py  test_backfill.py  test_caches.py  test_engine.py  test_features.py  test_latency.py  test_microstructure.py  test_parity.py  test_retention.py  test_sharding.py  test_store.py  test_universe.py
